--- a/source/stylesheets/dark-hive/_jquery-ui-1.8.17.custom.scss
+++ b/source/stylesheets/dark-hive/_jquery-ui-1.8.17.custom.scss
@@ -8,6 +8,7 @@
  * http://docs.jquery.com/UI/Theming/API
  */
 
+.clean_thug {
 /* Layout helpers
 ----------------------------------*/
 .ui-helper-hidden { display: none; }
@@ -563,3 +564,4 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
  */
 .ui-progressbar { height:2em; text-align: left; overflow: hidden; }
 .ui-progressbar .ui-progressbar-value {margin: -1px; height:100%; }
+}
